--- a/en/scm-documentation/sa/weapons.html
+++ b/en/scm-documentation/sa/weapons.html
@@ -338,8 +338,8 @@ td:nth-child(2),td:nth-child(3),td:nth-child(4){
 <td>40</td>
 <td>#remote<hr>364</td>
 <td>13</td>
-<td>![](../../../img/sa/weapon/satchelicon.png)</td>
-<td><code>SACHETCHARGES</code></td>        
+<td>before long</td>
+<td><code>DETONATOR</code></td>        
 </tr>
 <tr>
 <td>Spray Paint</td>
