--- a/en/version-history.html
+++ b/en/version-history.html
@@ -70,7 +70,7 @@ Read more on constants highlighting there: [Language service](editor/language-se
     * CLEO v4.4
     * SCRLog v2020.2
     * added [CLEO+ plugin](https://github.com/sannybuilder/dev/issues/71) for GTA SA with 250+ new opcodes
-  * [recognize Cleo for Android](https://github.com/sannybuilder/dev/issues/64) scripts (`*.csa`,` *.csi`) as compiled scripts
+  * [recognize Cleo for Android](https://github.com/sannybuilder/dev/issues/64) scripts (`*.csa`, `*.csi`) as compiled scripts
   * compiler uses CLEO opcodes `0A9E`, `0A9F`, `0A90`, `0A91` [in certain expressions when no opcode is supplied](https://github.com/sannybuilder/dev/issues/58#issuecomment-723376464)
   * unified description and keywords for CLEO opcodes across different edit modes
 * added [keywords](coding/keywords.md) for all opcodes in GTA SA SCR mode
@@ -83,7 +83,7 @@ Read more on constants highlighting there: [Language service](editor/language-se
 
 [Complete list of changes](https://github.com/sannybuilder/dev/issues/61)
 
-:clap: Kudos to [MatiDragon](https://github.com/MatiDragon-YT) and [Wesser](https://gtaforums.com/profile/172776-wesser/) for updated translations.
+👏 Kudos to [MatiDragon](https://github.com/MatiDragon-YT) and [Wesser](https://gtaforums.com/profile/172776-wesser/) for updated translations.
 
 ## v. 3.5.1 - 21.08.2020
 
