--- a/en/scm-documentation/virtual-key-codes.html
+++ b/en/scm-documentation/virtual-key-codes.html
@@ -1,348 +1,147 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Virtual Key Codes</title>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="../../style/style.css">
+	<title>Virtual Key Codes</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
 ```
-0AB0:   key_pressed &lt;id&gt;
+0AB0:	key_pressed &lt;id&gt;
 ```
 <table>
 <thead>
 <tr>
 <th>Key</th>
 <th>ID</th>
-</tr></thead>
-<tbody>
-<tr>
-<td>Left mouse button</td>
-<td>1</td>
-<tr>
-<td>Right mouse button</td>
-<td>2</td>
-<tr>
-<td>Middle mouse button</td>
-<td>4</td>
-<tr>
-<td>Backspace</td>
-<td>8</td>
-<tr>
-<td>Tab</td>
-<td>9</td>
-<tr>
-<td>Enter</td>
-<td>13</td>
-<tr>
-<td>Shift (both)</td>
-<td>16</td>
-<tr>
-<td>Ctrl (both)</td>
-<td>17</td>
-<tr>
-<td>Pause</td>
-<td>19</td>
-<tr>
-<td>Caps Lock</td>
-<td>20</td>
-<tr>
-<td>Esc</td>
-<td>27</td>
-<tr>
-<td>Spacebar</td>
-<td>32</td>
-<tr>
-<td>Page Up</td>
-<td>33</td>
-<tr>
-<td>Page Down</td>
-<td>34</td>
-<tr>
-<td>End</td>
-<td>35</td>
-<tr>
-<td>Home</td>
-<td>36</td>
-<tr>
-<td>(left arrow)</td>
-<td>37</td>
-<tr>
-<td>(up arrow)</td>
-<td>38</td>
-<tr>
-<td>(right arrow)</td>
-<td>39</td>
-<tr>
-<td>(down arrow)</td>
-<td>40</td>
-<tr>
-<td>Insert</td>
-<td>45</td>
-<tr>
-<td>Delete</td>
-<td>46</td>
-<tr>
-<td>0</td>
-<td>48</td>
-<tr>
-<td>1</td>
-<td>49</td>
-<tr>
-<td>2</td>
-<td>50</td>
-<tr>
-<td>3</td>
-<td>51</td>
-<tr>
-<td>4</td>
-<td>52</td>
-<tr>
-<td>5</td>
-<td>53</td>
-<tr>
-<td>6</td>
-<td>54</td>
-<tr>
-<td>7</td>
-<td>55</td>
-<tr>
-<td>8</td>
-<td>56</td>
-<tr>
-<td>9</td>
-<td>57</td>
-<tr>
-<td>A or a</td>
-<td>65</td>
-<tr>
-<td>B or b</td>
-<td>66</td>
-<tr>
-<td>C or c</td>
-<td>67</td>
-<tr>
-<td>D or d</td>
-<td>68</td>
-<tr>
-<td>E or e</td>
-<td>69</td>
-<tr>
-<td>F or f</td>
-<td>70</td>
-<tr>
-<td>G or g</td>
-<td>71</td>
-<tr>
-<td>H or h</td>
-<td>72</td>
-<tr>
-<td>I or i</td>
-<td>73</td>
-<tr>
-<td>J or j</td>
-<td>74</td>
-<tr>
-<td>K or k</td>
-<td>75</td>
-<tr>
-<td>L or l</td>
-<td>76</td>
-<tr>
-<td>M or m</td>
-<td>77</td>
-<tr>
-<td>N or n</td>
-<td>78</td>
-<tr>
-<td>O or o</td>
-<td>79</td>
-<tr>
-<td>P or p</td>
-<td>80</td>
-<tr>
-<td>Q or q</td>
-<td>81</td>
-<tr>
-<td>R or r</td>
-<td>82</td>
-<tr>
-<td>S or s</td>
-<td>83</td>
-<tr>
-<td>T or t</td>
-<td>84</td>
-<tr>
-<td>U or u</td>
-<td>85</td>
-<tr>
-<td>V or v</td>
-<td>86</td>
-<tr>
-<td>W or w</td>
-<td>87</td>
-<tr>
-<td>X or x</td>
-<td>88</td>
-<tr>
-<td>Y or y</td>
-<td>89</td>
-<tr>
-<td>Z or z</td>
-<td>90</td>
-<tr>
-<td>(left Windows key)</td>
-<td>91</td>
-<tr>
-<td>(right Windows key)</td>
-<td>92</td>
-<tr>
-<td>(application key - located between<BR>
-the right Windows and Ctrl 
-keys<BR>
-on most keyboards)</td>
-<td>93</td>
-<tr>
-<td>0 (numpad with Num Lock on)</td>
-<td>96</td>
-<tr>
-<td>1 (numpad with Num Lock on)</td>
-<td>97</td>
-<tr>
-<td>2 (numpad with Num Lock on)</td>
-<td>98</td>
-<tr>
-<td>3 (numpad with Num Lock on)</td>
-<td>99</td>
-<tr>
-<td>4 (numpad with Num Lock on)</td>
-<td>100</td>
-<tr>
-<td>5 (numpad with Num Lock on)</td>
-<td>101</td>
-<tr>
-<td>6 (numpad with Num Lock on)</td>
-<td>102</td>
-<tr>
-<td>7 (numpad with Num Lock on)</td>
-<td>103</td>
-<tr>
-<td>8 (numpad with Num Lock on)</td>
-<td>104</td>
-<tr>
-<td>9 (numpad with Num Lock on)</td>
-<td>105</td>
-<tr>
-<td>* (numpad)</td>
-<td>106</td>
-<tr>
-<td>+ (numpad)</td>
-<td>107</td>
-<tr>
-<td>- (numpad)</td>
-<td>109</td>
-<tr>
-<td>. (numpad)</td>
-<td>110</td>
-<tr>
-<td>/ (numpad)</td>
-<td>111</td>
-<tr>
-<td>F1</td>
-<td>112</td>
-<tr>
-<td>F2</td>
-<td>113</td>
-<tr>
-<td>F3</td>
-<td>114</td>
-<tr>
-<td>F4</td>
-<td>115</td>
-<tr>
-<td>F5</td>
-<td>116</td>
-<tr>
-<td>F6</td>
-<td>117</td>
-<tr>
-<td>F7</td>
-<td>118</td>
-<tr>
-<td>F8</td>
-<td>119</td>
-<tr>
-<td>F9</td>
-<td>120</td>
-<tr>
-<td>F10</td>
-<td>121</td>
-<tr>
-<td>F11</td>
-<td>122</td>
-<tr>
-<td>F12</td>
-<td>123</td>
-<tr>
-<td>Num Lock</td>
-<td>144</td>
-<tr>
-<td>Scroll Lock</td>
-<td>145</td>
-<tr>
-<td>Left Shift</td>
-<td>160</td>
-<tr>
-<td>Right Shift</td>
-<td>161</td>
-<tr>
-<td>Left Ctrl</td>
-<td>162</td>
-<tr>
-<td>Right Ctrl</td>
-<td>163</td>
-<tr>
-<td>Left Menu</td>
-<td>164</td>
-<tr>
-<td>Right Menu</td>
-<td>165</td>
-<tr>
-<td>;</td>
-<td>186</td>
-<tr>
-<td>=</td>
-<td>187</td>
-<tr>
-<td>,</td>
-<td>188</td>
-<tr>
-<td>-</td>
-<td>189</td>
-<tr>
-<td>.</td>
-<td>190</td>
-<tr>
-<td>/</td>
-<td>191</td>
-<tr>
-<td>`</td>
-<td>192</td>
-<tr>
-<td>[</td>
-<td>219</td>
-<tr>
-<td>\</td>
-<td>220</td>
-<tr>
-<td>]</td>
-<td>221</td>
-<tr>
-<td>'</td>
-<td>222</td>
-</tbody>
+</tr>
+</thead>
+<tbody></tbody>
 </table>
 
 <script src="../../js/main.min.js"></script>
+
+<script>
+const keys = [
+["Left mouse button",1],
+["Right mouse button",2],
+["Middle mouse button",4],
+["Backspace",8],
+["Tab",9],
+["Enter",13],
+["Shift (both)",16],
+["Ctrl (both)",17],
+["Pause",19],
+["Caps Lock",20],
+["Esc",27],
+["Spacebar",32],
+["Page Up",33],
+["Page Down",34],
+["End",35],
+["Home",36],
+["(left arrow)",37],
+["(up arrow)",38],
+["(right arrow)",39],
+["(down arrow)",40],
+["Insert",45],
+["Delete",46],
+["0",48],
+["1",49],
+["2",50],
+["3",51],
+["4",52],
+["5",53],
+["6",54],
+["7",55],
+["8",56],
+["9",57],
+["A or a",65],
+["B or b",66],
+["C or c",67],
+["D or d",68],
+["E or e",69],
+["F or f",70],
+["G or g",71],
+["H or h",72],
+["I or i",73],
+["J or j",74],
+["K or k",75],
+["L or l",76],
+["M or m",77],
+["N or n",78],
+["O or o",79],
+["P or p",80],
+["Q or q",81],
+["R or r",82],
+["S or s",83],
+["T or t",84],
+["U or u",85],
+["V or v",86],
+["W or w",87],
+["X or x",88],
+["Y or y",89],
+["Z or z",90],
+["(left Windows key)",91],
+["(right Windows key)",92],
+["(application key - located between<BR>the right Windows and Ctrl keys<BR>on most keyboards)",93],
+["0 (numpad with Num Lock on)",96],
+["1 (numpad with Num Lock on)",97],
+["2 (numpad with Num Lock on)",98],
+["3 (numpad with Num Lock on)",99],
+["4 (numpad with Num Lock on)",100],
+["5 (numpad with Num Lock on)",101],
+["6 (numpad with Num Lock on)",102],
+["7 (numpad with Num Lock on)",103],
+["8 (numpad with Num Lock on)",104],
+["9 (numpad with Num Lock on)",105],
+["* (numpad)",106],
+["+ (numpad)",107],
+["- (numpad)",109],
+[". (numpad)",110],
+["/ (numpad)",111],
+["F1",112],
+["F2",113],
+["F3",114],
+["F4",115],
+["F5",116],
+["F6",117],
+["F7",118],
+["F8",119],
+["F9",120],
+["F10",121],
+["F11",122],
+["F12",123],
+["Num Lock",144],
+["Scroll Lock",145],
+["Left Shift",160],
+["Right Shift",161],
+["Left Ctrl",162],
+["Right Ctrl",163],
+["Left Menu",164],
+["Right Menu",165],
+[";",186],
+["=",187],
+[",",188],
+["-",189],
+[".",190],
+["/",191],
+["`",192],
+["[",219],
+["\\",220],
+["]",221],
+["'",222]
+]
+
+var $tbody = $('tbody')
+
+for (var i = 0; i < keys.length; i++) {
+
+$tbody.innerHTML +=
+	"<tr>"+
+	"<td>"+ keys[i][0] +"</td>"+
+	"<td>"+ keys[i][1] +"</td>"+
+	"</tr>"
+}
+</script>
