--- a/en/version-history.html
+++ b/en/version-history.html
@@ -22,7 +22,7 @@
 * updated translations to Hungarian, Spanish, Ukrainian and Chinese languages
 * [fixed 16 bugs](https://github.com/sannybuilder/dev/issues/130#issue-805022048)
 
-👏 Kudos to contributors to this release: [forms55](https://github.com/forms55), [MatiDragon](https://github.com/MatiDragon-YT), [Vital](https://github.com/VitalRus95), [wmysterio](https://github.com/wmysterio), [XMDS](https://github.com/XMDS)
+:clap: Kudos to contributors to this release: [forms55](https://github.com/forms55), [MatiDragon](https://github.com/MatiDragon-YT), [Vital](https://github.com/VitalRus95), [wmysterio](https://github.com/wmysterio), [XMDS](https://github.com/XMDS)
 
 [Complete list of changes](https://github.com/sannybuilder/dev/issues/130)
 
@@ -83,7 +83,7 @@ Read more on constants highlighting there: [Language service](editor/language-se
 
 [Complete list of changes](https://github.com/sannybuilder/dev/issues/61)
 
-👏 Kudos to [MatiDragon](https://github.com/MatiDragon-YT) and [Wesser](https://gtaforums.com/profile/172776-wesser/) for updated translations.
+:clap: Kudos to [MatiDragon](https://github.com/MatiDragon-YT) and [Wesser](https://gtaforums.com/profile/172776-wesser/) for updated translations.
 
 ## v. 3.5.1 - 21.08.2020
 
