--- a/en/scm-documentation/virtual-key-codes.html
+++ b/en/scm-documentation/virtual-key-codes.html
@@ -15,7 +15,7 @@
 <thead>
 <tr>
 <th>Key</th>
-<th>ID</th>
+<th>id</th>
 </tr>
 </thead>
 <tbody></tbody>
@@ -132,9 +132,8 @@ const keys = [
 ["\\",220],
 ["]",221],
 ["'",222]
-]
-
-var $tbody = $('tbody')
+],
+$tbody = $('tbody')
 
 for (var i = 0; i < keys.length; i++) {
 
