--- a/en/scm-documentation/sa/zones.html
+++ b/en/scm-documentation/sa/zones.html
@@ -8,11 +8,9 @@
   <link rel="stylesheet" type="text/css" href="../../../style/style.css">
 </head>
 <body>
-
 ```sb3
 0767: set_zone 'CARSO' type &lt;type&gt;
 ```
-
 <table>
 <thead>
 <tr>
@@ -103,7 +101,9 @@
 </tr>
 </tbody>
 </table>
-<h3 id="los-santos">Los Santos</h3>
+
+### Los Santos
+
 <table>
 <thead>
 <tr>
@@ -850,7 +850,9 @@
 </tr>
 </tbody>
 </table>
-<h3 id="red-county">Red County</h3>
+
+### Red County
+
 <table>
 <thead>
 <tr>
@@ -937,7 +939,9 @@
 </tr>
 </tbody>
 </table>
-<h3 id="san-fierro">San Fierro</h3>
+
+### San Fierro
+
 <table>
 <thead>
 <tr>
@@ -1189,7 +1193,9 @@
 </tr>
 </tbody>
 </table>
-<h3 id="flint-county">Flint County</h3>
+
+### Flint County
+
 <table>
 <thead>
 <tr>
@@ -1311,7 +1317,9 @@
 </tr>
 </tbody>
 </table>
-<h3 id="whetstone">Whetstone</h3>
+
+### Whetstone
+
 <table>
 <thead>
 <tr>
@@ -1368,7 +1376,9 @@
 </tr>
 </tbody>
 </table>
-<h3 id="las-venturas">Las Venturas</h3>
+
+### Las Venturas
+
 <table>
 <thead>
 <tr>
@@ -1830,7 +1840,9 @@
 </tr>
 </tbody>
 </table>
-<h3 id="tierra-robada">Tierra Robada</h3>
+
+### Tierra Robada
+
 <table>
 <thead>
 <tr>
@@ -1887,7 +1899,9 @@
 </tr>
 </tbody>
 </table>
-<h3 id="bone-county">Bone County</h3>
+
+### Bone County
+
 <table>
 <thead>
 <tr>
@@ -1984,7 +1998,9 @@
 </tr>
 </tbody>
 </table>
-<h3 id="lakes">Lakes</h3>
+
+### Lakes
+
 <table>
 <thead>
 <tr>
@@ -2031,7 +2047,9 @@
 </tr>
 </tbody>
 </table>
-<h3 id="bridges">Bridges</h3>
+
+### Bridges
+
 <table>
 <thead>
 <tr>
