--- a/en/scm-documentation/sa/weapons.html
+++ b/en/scm-documentation/sa/weapons.html
@@ -96,7 +96,7 @@ $tbody.innerHTML +=
   "<td>"+ keys[i][2] +"<hr>"+ keys[i][3] +"</td>"+ // model
   "<td>"+ keys[i][4] +"</td>"+ // group
   "<td><center><img src='../../../img/sa/weapon/"+ keys[i][5] +".png'></center></td>"+
-  "<td>"+ keys[i][6] +"</td>"+ // gxt
+  "<td><code>"+ keys[i][6] +"</code></td>"+ // gxt
   "</tr>"
 }
 
