--- a/en/scm-documentation/ascii-character-codes.html
+++ b/en/scm-documentation/ascii-character-codes.html
@@ -190,15 +190,14 @@ const keys = [
 ["ý",253],
 ["þ",254],
 ["ÿ",255]
-],
-$tbody = $('tbody')
+] 
 
-for (var i = 0; i < keys.length; i++) {
-
-$tbody.innerHTML +=
-	"<tr>"+
-	"<td>"+ keys[i][0] +"</td>"+
-	"<td>"+ keys[i][1] +"</td>"+
-	"</tr>"
+for (var i=0,text=""; i < keys.length; i++) {
+text+=
+"<tr>"+
+"<td>"+keys[i][0]+"</td>"+
+"<td>"+keys[i][1]+"</td>"+
+"</tr>"
 }
+$('tbody').innerHTML+=text
 </script>
