--- a/en/scm-documentation/virtual-key-codes.html
+++ b/en/scm-documentation/virtual-key-codes.html
@@ -132,15 +132,14 @@ const keys = [
 ["\\",220],
 ["]",221],
 ["'",222]
-],
-$tbody = $('tbody')
+]
 
-for (var i = 0; i < keys.length; i++) {
-
-$tbody.innerHTML +=
-	"<tr>"+
-	"<td>"+ keys[i][0] +"</td>"+
-	"<td>"+ keys[i][1] +"</td>"+
-	"</tr>"
+for (var i=0,text=""; i < keys.length; i++) {
+text+=
+"<tr>"+
+"<td>"+keys[i][0]+"</td>"+
+"<td>"+keys[i][1]+"</td>"+
+"</tr>"
 }
+$('tbody').innerHTML+=text
 </script>
