--- a/en/scm-documentation/gta-limits.html
+++ b/en/scm-documentation/gta-limits.html
@@ -77,11 +77,11 @@
 </tr>
 <tr>
 <td>**local variables**</td>
-<td>16+2 <a href="../coding/variables.md#timer-variables">timers</a></td>
-<td>16+2 <a href="../coding/variables.md#timer-variables">timers</a></td>
-<td><p>32+2 <a href="../coding/variables.md#timer-variables">timers</a></p><p>1024 total in missions</p></td>
-<td>40+2 <a href="../coding/variables.md#timer-variables">timers</a></td>
-<td>96+2 <a href="../coding/variables.md#timer-variables">timers</a></td>
+<td>16+2 [timers](../coding/variables.md#timer-variables)</td>
+<td>16+2 [timers](../coding/variables.md#timer-variables)</td>
+<td><p>32+2 [timers](../coding/variables.md#timer-variables)</p><p>1024 total in missions</p></td>
+<td>40+2 [timers](../coding/variables.md#timer-variables)</td>
+<td>96+2 [timers](../coding/variables.md#timer-variables)</td>
 <td></td>
 </tr>
 <tr>
