--- a/en/scm-documentation/sa/radar-icons.html
+++ b/en/scm-documentation/sa/radar-icons.html
@@ -8,341 +8,97 @@
   <link rel="stylesheet" type="text/css" href="../../../style/style.css">
 </head>
 <body>
-
 ```sb3
 02A7: 0@ = create_icon_marker_and_sphere &lt;ID&gt; at 892.75 -425.75 13.875
 ```
-
 <table>
 <thead>
 <tr>
-<th>ID</th>
-<th>Icon</th>
 <th>Description</th>
+<th>ID</th>
+<th>GUI</th>
+<th>GXT</th>
 </tr>
 </thead>
-<tbody>
-<tr>
-<td>0</td>
-<td>![](../../../img/sa/radar/icon0.gif)</td>
-<td>small yellow square</td>
-</tr>
-<tr>
-<td>1</td>
-<td>![](../../../img/sa/radar/icon1.gif)</td>
-<td>white square</td>
-</tr>
-<tr>
-<td>2</td>
-<td>![](../../../img/sa/radar/icon2.gif)</td>
-<td>Player position</td>
-</tr>
-<tr>
-<td>3</td>
-<td>![](../../../img/sa/radar/icon3.gif)</td>
-<td>Arrow (Menu-card)</td>
-</tr>
-<tr>
-<td>4</td>
-<td>![](../../../img/sa/radar/icon4.gif)</td>
-<td>North</td>
-</tr>
-<tr>
-<td>5</td>
-<td>![](../../../img/sa/radar/icon5.gif)</td>
-<td>Airport</td>
-</tr>
-<tr>
-<td>6</td>
-<td>![](../../../img/sa/radar/icon6.gif)</td>
-<td>Ammu Nation</td>
-</tr>
-<tr>
-<td>7</td>
-<td>![](../../../img/sa/radar/icon7.gif)</td>
-<td>Barber</td>
-</tr>
-<tr>
-<td>8</td>
-<td>![](../../../img/sa/radar/icon8.gif)</td>
-<td>Big Smoke</td>
-</tr>
-<tr>
-<td>9</td>
-<td>![](../../../img/sa/radar/icon9.gif)</td>
-<td>Docks</td>
-</tr>
-<tr>
-<td>10</td>
-<td>![](../../../img/sa/radar/icon10.gif)</td>
-<td>Burger Shot</td>
-</tr>
-<tr>
-<td>11</td>
-<td>![](../../../img/sa/radar/icon11.gif)</td>
-<td>Bulldozer</td>
-</tr>
-<tr>
-<td>12</td>
-<td>![](../../../img/sa/radar/icon12.gif)</td>
-<td>Catalina</td>
-</tr>
-<tr>
-<td>13</td>
-<td>![](../../../img/sa/radar/icon13.gif)</td>
-<td>Cesar Viapando</td>
-</tr>
-<tr>
-<td>14</td>
-<td>![](../../../img/sa/radar/icon14.gif)</td>
-<td>Chicken</td>
-</tr>
-<tr>
-<td>15</td>
-<td>![](../../../img/sa/radar/icon15.gif)</td>
-<td>Carl Johnson</td>
-</tr>
-<tr>
-<td>16</td>
-<td>![](../../../img/sa/radar/icon16.gif)</td>
-<td>Crash</td>
-</tr>
-<tr>
-<td>17</td>
-<td>![](../../../img/sa/radar/icon17.gif)</td>
-<td>Dinner</td>
-</tr>
-<tr>
-<td>18</td>
-<td>![](../../../img/sa/radar/icon18.gif)</td>
-<td>Emmet</td>
-</tr>
-<tr>
-<td>19</td>
-<td>![](../../../img/sa/radar/icon19.gif)</td>
-<td>enemy attack</td>
-</tr>
-<tr>
-<td>20</td>
-<td>![](../../../img/sa/radar/icon20.gif)</td>
-<td>Fire</td>
-</tr>
-<tr>
-<td>21</td>
-<td>![](../../../img/sa/radar/icon21.gif)</td>
-<td>Girl Friend</td>
-</tr>
-<tr>
-<td>22</td>
-<td>![](../../../img/sa/radar/icon22.gif)</td>
-<td>Hospital</td>
-</tr>
-<tr>
-<td>23</td>
-<td>![](../../../img/sa/radar/icon23.gif)</td>
-<td>Loco Syndicate</td>
-</tr>
-<tr>
-<td>24</td>
-<td>![](../../../img/sa/radar/icon24.gif)</td>
-<td>Maddog</td>
-</tr>
-<tr>
-<td>25</td>
-<td>![](../../../img/sa/radar/icon25.gif)</td>
-<td>Mafia</td>
-</tr>
-<tr>
-<td>26</td>
-<td>![](../../../img/sa/radar/icon26.gif)</td>
-<td>MC Strap</td>
-</tr>
-<tr>
-<td>27</td>
-<td>![](../../../img/sa/radar/icon27.gif)</td>
-<td>Tuning Shop</td>
-</tr>
-<tr>
-<td>28</td>
-<td>![](../../../img/sa/radar/icon28.gif)</td>
-<td>OG Loc</td>
-</tr>
-<tr>
-<td>29</td>
-<td>![](../../../img/sa/radar/icon29.gif)</td>
-<td>Pizza</td>
-</tr>
-<tr>
-<td>30</td>
-<td>![](../../../img/sa/radar/icon30.gif)</td>
-<td>Police</td>
-</tr>
-<tr>
-<td>31</td>
-<td>![](../../../img/sa/radar/icon31.gif)</td>
-<td>Asset green</td>
-</tr>
-<tr>
-<td>32</td>
-<td>![](../../../img/sa/radar/icon32.gif)</td>
-<td>Asset red</td>
-</tr>
-<tr>
-<td>33</td>
-<td>![](../../../img/sa/radar/icon33.gif)</td>
-<td>Race</td>
-</tr>
-<tr>
-<td>34</td>
-<td>![](../../../img/sa/radar/icon34.gif)</td>
-<td>Ryder</td>
-</tr>
-<tr>
-<td>35</td>
-<td>![](../../../img/sa/radar/icon35.gif)</td>
-<td>Savepoint</td>
-</tr>
-<tr>
-<td>36</td>
-<td>![](../../../img/sa/radar/icon36.gif)</td>
-<td>School</td>
-</tr>
-<tr>
-<td>37</td>
-<td>![](../../../img/sa/radar/icon37.gif)</td>
-<td>Unknown</td>
-</tr>
-<tr>
-<td>38</td>
-<td>![](../../../img/sa/radar/icon38.gif)</td>
-<td>Sweet</td>
-</tr>
-<tr>
-<td>39</td>
-<td>![](../../../img/sa/radar/icon39.gif)</td>
-<td>Tattoo</td>
-</tr>
-<tr>
-<td>40</td>
-<td>![](../../../img/sa/radar/icon40.gif)</td>
-<td>The Truth</td>
-</tr>
-<tr>
-<td>41</td>
-<td>![](../../../img/sa/radar/icon41.gif)</td>
-<td>Player target</td>
-</tr>
-<tr>
-<td>42</td>
-<td>![](../../../img/sa/radar/icon42.gif)</td>
-<td>Toreno Ranch</td>
-</tr>
-<tr>
-<td>43</td>
-<td>![](../../../img/sa/radar/icon43.gif)</td>
-<td>Triads</td>
-</tr>
-<tr>
-<td>44</td>
-<td>![](../../../img/sa/radar/icon44.gif)</td>
-<td>Triads Casino</td>
-</tr>
-<tr>
-<td>45</td>
-<td>![](../../../img/sa/radar/icon45.gif)</td>
-<td>Clothes</td>
-</tr>
-<tr>
-<td>46</td>
-<td>![](../../../img/sa/radar/icon46.gif)</td>
-<td>Woozie</td>
-</tr>
-<tr>
-<td>47</td>
-<td>![](../../../img/sa/radar/icon47.gif)</td>
-<td>Zero</td>
-</tr>
-<tr>
-<td>48</td>
-<td>![](../../../img/sa/radar/icon48.gif)</td>
-<td>Disco</td>
-</tr>
-<tr>
-<td>49</td>
-<td>![](../../../img/sa/radar/icon49.gif)</td>
-<td>Bar</td>
-</tr>
-<tr>
-<td>50</td>
-<td>![](../../../img/sa/radar/icon50.gif)</td>
-<td>Restaurant</td>
-</tr>
-<tr>
-<td>51</td>
-<td>![](../../../img/sa/radar/icon51.gif)</td>
-<td>Truck</td>
-</tr>
-<tr>
-<td>52</td>
-<td>![](../../../img/sa/radar/icon52.gif)</td>
-<td>Robbery</td>
-</tr>
-<tr>
-<td>53</td>
-<td>![](../../../img/sa/radar/icon53.gif)</td>
-<td>Race</td>
-</tr>
-<tr>
-<td>54</td>
-<td>![](../../../img/sa/radar/icon54.gif)</td>
-<td>Gym</td>
-</tr>
-<tr>
-<td>55</td>
-<td>![](../../../img/sa/radar/icon55.gif)</td>
-<td>Car</td>
-</tr>
-<tr>
-<td>56</td>
-<td>![](../../../img/sa/radar/icon56.gif)</td>
-<td>Light</td>
-</tr>
-<tr>
-<td>57</td>
-<td>![](../../../img/sa/radar/icon57.gif)</td>
-<td>Run Way</td>
-</tr>
-<tr>
-<td>58</td>
-<td>![](../../../img/sa/radar/icon58.gif)</td>
-<td>Varrios Los Aztecas Gang</td>
-</tr>
-<tr>
-<td>59</td>
-<td>![](../../../img/sa/radar/icon59.gif)</td>
-<td>Ballas Gang</td>
-</tr>
-<tr>
-<td>60</td>
-<td>![](../../../img/sa/radar/icon60.gif)</td>
-<td>Los Santos Vagos Gang</td>
-</tr>
-<tr>
-<td>61</td>
-<td>![](../../../img/sa/radar/icon61.gif)</td>
-<td>San Fierro Rifa Gang</td>
-</tr>
-<tr>
-<td>62</td>
-<td>![](../../../img/sa/radar/icon62.gif)</td>
-<td>Grove Gang</td>
-</tr>
-<tr>
-<td>63</td>
-<td>![](../../../img/sa/radar/icon63.gif)</td>
-<td>Pay'n Spray</td>
-</tr>
-</tbody>
+<tbody></tbody>
 </table>
 
 <script src="../../../js/main.min.js"></script>
+
+<script>
+t="";const keys=[
+["small yellow square",0,"icon0","LG_50"],
+["white square",1,"icon1","-"],
+["Player position",2,"icon2","LG_01"],
+["Arrow (Menu-card)",3,"icon3","LG_64"],
+["North",4,"icon4","-"],
+["Airport",5,"icon5","LG_02"],
+["Ammu Nation",6,"icon6","LG_03"],
+["Barber",7,"icon7","LG_04"],
+["Big Smoke",8,"icon8","LG_05"],
+["Docks",9,"icon9","LG_06"],
+["Burger Shot",10,"icon10","LG_07"],
+["Bulldozer",11,"icon11","LG_66"],
+["Catalina",12,"icon12","LG_08"],
+["Cesar Viapando",13,"icon13","LG_10"],
+["Chicken",14,"icon14","LG_11"],
+["Carl Johnson",15,"icon15","LG_12"],
+["Crash",16,"icon16","LG_13"],
+["Dinner",17,"icon17","LG_67"],
+["Emmet",18,"icon18","LG_15"],
+["enemy attack",19,"icon19","LG_16"],
+["Fire",20,"icon20","LG_17"],
+["Girl Friend",21,"icon21","LG_18"],
+["Hospital",22,"icon22","LG_19"],
+["Loco Syndicate",23,"icon23","LG_20"],
+["Maddog",24,"icon24","LG_21"],
+["Mafia",25,"icon25","LG_22"],
+["MC Strap",26,"icon26","LG_23"],
+["Tuning Shop",27,"icon27","LG_24"],
+["OG Loc",28,"icon28","LG_25"],
+["Pizza",29,"icon29","LG_26"],
+["Police",30,"icon30","LG_27"],
+["Asset green",31,"icon31","LG_28"],
+["Asset red",32,"icon32","LG_29"],
+["Race",33,"icon33","LG_30"],
+["Ryder",34,"icon34","LG_31"],
+["Savepoint",35,"icon35","LG_32"],
+["School",36,"icon36","LG_33"],
+["Unknown",37,"icon37","LG_63"],
+["Sweet",38,"icon38","LG_35"],
+["Tattoo",39,"icon39","LG_36"],
+["The Truth",40,"icon40","LG_37"],
+["Player target",41,"icon41","LG_38"],
+["Toreno Ranch",42,"icon42","LG_39"],
+["Triads",43,"icon43","LG_40"],
+["Triads Casino",44,"icon44","LG_41"],
+["Clothes",45,"icon45","LG_42"],
+["Woozie",46,"icon46","LG_43"],
+["Zero",47,"icon47","LG_44"],
+["Disco",48,"icon48","LG_45"],
+["Bar",49,"icon49","LG_46"],
+["Restaurant",50,"icon50","LG_47"],
+["Truck",51,"icon51","LG_48"],
+["Robbery",52,"icon52","LG_51"],
+["Race",53,"icon53","LG_52"],
+["Gym",54,"icon54","LG_53"],
+["Car",55,"icon55","LG_57"],
+["Light",56,"icon56","LG_65"],
+["Run Way",57,"icon57","-"],
+["Varrios Los Aztecas Gang",58,"icon58","LG_58"],
+["Ballas Gang",59,"icon59","LG_59"],
+["Los Santos Vagos Gang",60,"icon60","LG_60"],
+["San Fierro Rifa Gang",61,"icon61","LG_61"],
+["Grove Gang",62,"icon62","LG_62"],
+["Pay'n Spray",63,"icon63","LG_34"]
+].forEach(function(key){
+  t+=
+  "<tr>"+
+  "<td>"+key[0]+"</td>"+
+  "<td>"+key[1]+"</td>"+
+  "<td><center><img src='../../../img/sa/radar/"+key[2]+".gif'></center></td>"+
+  "<td><code>"+key[3]+"</code></td>"+
+  "</tr>"
+})
+$('tbody').innerHTML+=t
+</script>
