--- a/en/scm-documentation/sa/weapons.html
+++ b/en/scm-documentation/sa/weapons.html
@@ -1,24 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Weapon IDs</title>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="../../../style/style.css">
+	<title>Weapon IDs</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="../../../style/style.css">
 </head>
 <body>
-
 ```sb3
 01B2: give_actor $PLAYER_ACTOR weapon &lt;id&gt; ammo 60 
 ```
-<STYLE>
-th:nth-child(2),th:nth-child(3),th:nth-child(4),th:nth-child(5),th:nth-child(6),
-td:nth-child(2),td:nth-child(3),td:nth-child(4),td:nth-child(5),td:nth-child(6){
- text-align: center;
-}
-</STYLE>
-
 <table>
 <thead>
 <tr>
@@ -26,8 +18,8 @@ td:nth-child(2),td:nth-child(3),td:nth-child(4),td:nth-child(5),td:nth-child(6){
 <th>ID</th>
 <th>Model</th>
 <th>Group</th>  
-<th>Icon</th>
-<th>GXT & ENUM</th>
+<th>GUI</th>
+<th>GXT</th>
 </tr>
 </thead>
 <tbody>
@@ -37,7 +29,7 @@ td:nth-child(2),td:nth-child(3),td:nth-child(4),td:nth-child(5),td:nth-child(6){
 <script src="../../../js/main.min.js"></script>
 
 <script>
-const keys = [
+t="";const keys=[
 ["Unarmed",0,"1",-1,1,"fist","UNARMED"],
 ["Brass Knuckles",1,"brassknuckle",331,1,"BRASSKNUCKLEicon","BRASSKNUCKLE"],
 ["Golf Club",2,"golfclub",333,2,"golfclubicon","GOLFCLUB"],
@@ -84,18 +76,16 @@ const keys = [
 ["Parachute",46,"gun_para",371,12,"gun_paraIcon","PARACHUTE"],
 ["Jetpack","-","jetpack",370,"-","jetpackicon","-"],
 ["Cellphone","-","cellphone",330,"-","cellphoneicon","-"]
-]
-
-for (var i=0,text=""; i < keys.length; i++) {
-text+=
+].forEach(function(key){
+t+=
 "<tr>"+
-"<td>"+keys[i][0]+"</td>"+ // name
-"<td>"+keys[i][1]+"</td>"+ // id
-"<td>"+keys[i][2]+"<hr>"+keys[i][3]+"</td>"+ // model
-"<td>"+keys[i][4]+"</td>"+ // group
-"<td><center><img src='../../../img/sa/weapon/"+keys[i][5]+".png'></center></td>"+
-"<td><code>"+keys[i][6]+"</code></td>"+ // gxt
+"<td>"+key[0]+"</td>"+ // name
+"<td>"+key[1]+"</td>"+ // id
+"<td>"+key[2]+"<hr>"+key[3]+"</td>"+ // model
+"<td>"+key[4]+"</td>"+ // group
+"<td><center><img src='../../../img/sa/weapon/"+key[5]+".png'></center></td>"+
+"<td><code>"+key[6]+"</code></td>"+ // gxt
 "</tr>"
-}
-$('tbody').innerHTML+=text
+})
+$('tbody').innerHTML+=t
 </script>
