--- a/en/scm-documentation/virtual-key-codes.html
+++ b/en/scm-documentation/virtual-key-codes.html
@@ -24,7 +24,7 @@
 <script src="../../js/main.min.js"></script>
 
 <script>
-const keys = [
+t="";const keys=[
 ["Left mouse button",1],
 ["Right mouse button",2],
 ["Middle mouse button",4],
@@ -132,14 +132,12 @@ const keys = [
 ["\\",220],
 ["]",221],
 ["'",222]
-]
-
-for (var i=0,text=""; i < keys.length; i++) {
-text+=
+].forEach(function(key){
+t+=
 "<tr>"+
-"<td>"+keys[i][0]+"</td>"+
-"<td>"+keys[i][1]+"</td>"+
+"<td>"+key[0]+"</td>"+
+"<td>"+key[1]+"</td>"+
 "</tr>"
-}
-$('tbody').innerHTML+=text
+})
+$('tbody').innerHTML+=t
 </script>
