--- a/en/scm-documentation/sa/radar-icons.html
+++ b/en/scm-documentation/sa/radar-icons.html
@@ -28,10 +28,10 @@
 <script>
 t="";const keys=[
 ["small yellow square",0,"icon0","LG_50"],
-["white square",1,"icon1","-"],
+["Friend",1,"icon1","LG_54"],
 ["Player position",2,"icon2","LG_01"],
 ["Arrow (Menu-card)",3,"icon3","LG_64"],
-["North",4,"icon4","-"],
+["North",4,"icon4",""],
 ["Airport",5,"icon5","LG_02"],
 ["Ammu Nation",6,"icon6","LG_03"],
 ["Barber",7,"icon7","LG_04"],
@@ -46,7 +46,7 @@ t="";const keys=[
 ["Crash",16,"icon16","LG_13"],
 ["Dinner",17,"icon17","LG_67"],
 ["Emmet",18,"icon18","LG_15"],
-["enemy attack",19,"icon19","LG_16"],
+["Enemy attack",19,"icon19","LG_16"],
 ["Fire",20,"icon20","LG_17"],
 ["Girl Friend",21,"icon21","LG_18"],
 ["Hospital",22,"icon22","LG_19"],
@@ -83,8 +83,8 @@ t="";const keys=[
 ["Race",53,"icon53","LG_52"],
 ["Gym",54,"icon54","LG_53"],
 ["Car",55,"icon55","LG_57"],
-["Light",56,"icon56","LG_65"],
-["Run Way",57,"icon57","-"],
+["Light",56,"icon56",""],
+["Nearest air strip",57,"icon57","LG_65"],
 ["Varrios Los Aztecas Gang",58,"icon58","LG_58"],
 ["Ballas Gang",59,"icon59","LG_59"],
 ["Los Santos Vagos Gang",60,"icon60","LG_60"],
